tests/sad_unexpected_token.msh
// error: line 1: Unexpected statement outside of block
x: int;
a: int;
b: int;
c: int;
BEGIN
	a := 2;
	b := 4;
	c := -8;
	x := a * -c + b * -c;
	print x;
	print c;
END
